--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+
+body,
+html {
+  font-family: "Roboto", sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
 .App {
   text-align: center;
 }
